--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>
         hello dash
     </title>
 </head>
 <body>
-    <h1>
-        byesalamgreggrtge
-    </h1>
+    <div>Y</div>
+    <span>N</span>
+    <div><span>K</span></div>
 </body>
 </html>
